Fix overflowing bios

--- a/css/styles.css
+++ b/css/styles.css
@@ -204,12 +204,12 @@ body main {
 .bio-card {
   box-shadow: 5px 10px 4px #888888;
   border-width: thin !important;
-  overflow: hidden;
   position: relative;
+  /* clip from bottom of card but allow overflowing the top */
+  clip-path: polygon(0 -100%, 100% -100%, 100% 100%, 0% 100%);
 }
 
 .bio-rect-img {
-  /* padding: 15px 15px 0px 15px; */
   display: block;
 }
 
@@ -225,7 +225,7 @@ body main {
   transform: translateY(100%);
   transition: all 0.3s ease;
   background-color: var(--dark);
-  /* margin: 0px 15px 0 15px; */
+  user-select: none;
 }
 
 .caption:hover {
@@ -238,14 +238,6 @@ body main {
   left: 0;
   right: 0;
   background-color: var(--dark);
-  overflow: visible;
-  user-select: none;
-}
-
-.bio-hidden {
-  /* display: none; */
-  /* visibility: hidden; */
-  overflow: hidden;
 }
 
 .role {
